css/styles.css
@font-face {
    font-family: 'uppereastsideregular';
    src: url('../UpperEastSide-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}


*{
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	list-style-type: none;
	text-decoration: none;
	font-family: 'Mallanna', sans-serif;
}

body{
  background-color: #fbfbfb;
}



.fade-enter-active {
  transition: all .25s ease-in;
}
.fade-leave-active {
  transition: all .25s ease-out;
}
.fade-enter, .fade-leave-to{
  opacity: 0;
}



h3{
  margin: 0 auto 4em;
  text-align: center;
  color: #3a3a3a;
  max-width: 90%;
}

.yahoo img{
  vertical-align: bottom;
}

p > a:not(.yahoo), h2 a, h3 a{
  text-decoration: underline;
  font-family: sans-serif;
  font-size: 14px;
  background-color: #e1e1e1;
  color: #700080;
}

p > a:hover:not(.yahoo), h2 a:hover, h3 a:hover{
  color: #e1e1e1;
  background-color: #700080;
}

footer p > a:first-of-type{
  letter-spacing: 4px;
}

.warning{
  color: #e1e1e1;
  background-color: #80000f;
  border: 1px dashed #f5d76e;
}

#loc a{
  cursor: pointer;
}



header{
  margin-top: 6.5em;
}


h1{
  margin: 0 auto 1.5em;
  font-family: 'uppereastsideregular';
	font-size: 52px;
  letter-spacing: 6px;
  text-align: center;
  width: 95%;
  color: #3a3a3a;
}

p{
  margin: 0 2em;
  color: blue;
  text-align: center;
}

main{
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  margin: 1em 0 2em;
}

footer p{
  margin: 0;
  font-size: 15px;
  color: #2f2928;
}

aside{
  margin-top: 4px;
}

aside p{
  /* font-family: 'Nunito Sans', sans-serif; */
  font-size: 16px;
  line-height: 1.6;
}

aside p img{
  vertical-align: middle;
}



.photo-hold{
  position: relative;
  width: 320px;
  height: 650px;
  background-image: url("../images/painting.jpg");
  margin: 15.4em auto 0;
  border: 1px solid #3a3a3a;
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-direction: column;
}

.adjMargTop{
  margin-top: 3.1em;
}


.expand-enter, .expand-leave-to{
  height: 0px;
  margin-top: 0;
}
.expand-enter-active, .expand-leave-active{
  transition: all 1s cubic-bezier(1, .03, .6, .96);
}





.camera, .video-output{
  width: 300px;
  /* height: 300px; */
  background: #bdbdbd79;
  border: 1px solid #3a3a3a;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.camera{
  position: relative;
}


.userpic{
  margin: 1em auto;
  /* width: 200px;
  height: 150px; */
  background-color: #80000f;
}


.userpic img{
  /* width: 200px;
  height: 150px; */
  border-radius: 5%;
}

.grow-enter, .grow-leave-to{
  opacity: 0;
}
.grow-enter-active, .grow-leave-active{
  transition: all 1.1s cubic-bezier(0, .96, .6, .96);
}



#videocanvas{
  display: none;
}

#videobutton{
  position: absolute;
  font-family: 'Poiret One', cursive;
  background: #0f8000;
  bottom: 3px;
  font-weight: bold;
  letter-spacing: 1px;
  width: 110px;
  font-size: 18px;
  height: 30px;
  color: #fbfbfb;
  border: 2px solid #fbfbfb;
  filter: none;
  left: 50%;
  transform: translateX(-50%);
}

#videoclose{
  position: absolute;
  background: #80000f;
  color: #fbfbfb;
  top: 0;
  right: 0;
  border: 2px solid #fbfbfb;
  width: 26px;
  height: 36px;
  font-size: 36px;
  line-height: 0;
  filter: none;
}




.greenBackground{
  background-color: #0f8000;
}

ul{
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
}

li{
  display: flex;
  flex-direction: column;
  margin: 0 .5em 2em;
  align-items: center;
}

li img{
  margin-bottom: .75em;
}

li, li span{
  font-family: 'Poiret One', cursive;
  font-size: 26px;
}

li span{
  font-style: italic;
  margin-bottom: .5em;
  text-align: center;
}

form{
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  margin-bottom: 8em;
}

form div{
  display: flex;
  flex-direction: column;
}

label{
  text-align: center;
}

fieldset{
  border: none;
  display: flex;
  flex-direction: column;
  align-items: center;
}

hr{
  width: 90%;
  border: .5px solid black;
  margin: auto;
}



fieldset:nth-of-type(2){
  margin-top: 1em;
}

legend{
  font-family: 'Limelight', cursive;
  width: 100%;
  color: #3a3a3a;
  text-align: center;
  font-size: 30px;
  text-decoration: underline;
  margin-bottom: .5em;
}

fieldset input{
  display: block;
  margin: 0 auto 1em;
  width: 148px;
}


fieldset input[type="color"]{
  width: 100px;
  border: none;
  background-color: transparent;
  margin: 0 auto .5em;
  height: 30px;
}

fieldset select{
	margin-bottom: 1em;
}


input[type="checkbox"]{
  display: inline-block;
  -webkit-appearance: none;
  -moz-appearance: none;
  outline: none;
  width: 20px;
  margin: 0 0 0 10px;
}

input[type="checkbox"]:after{
  content: "x";
  position: relative;
  display: block;
  top: 4px;
  width: 20px;
  text-align: center;
  font-size: 39px;
  line-height: 8px;
  color: #fbfbfb;
  background-color: #80000f;
  height: 17px;
}

input[type="checkbox"]:checked:after{
  content: "\2713";
  font-size: 26px;
  line-height: 17px;
  background-color: #0f8000;
}


#puzz{
  margin-top: 2em;
  margin-bottom: 1em;
}



#code{
  background-color: #eee;
  min-height: 500px;
  padding: 5px;
}

.blurry{
  filter: blur(4px);
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.newwindow::after{
  content: '';
  display: inline-block;
  width: 14px;
  height: 14px;
  background: url('../images/newwindow.png') 0 0 no-repeat;
}

[v-cloak]{
  display: none;
}

pre span,
pre code{
  color: #80000f;
  font-family: monospace;
}

pre code{
  white-space: pre-line;
}

#lang-select{
  display: grid;

  grid: "larrow ctext rarrow" 60% "lcopy . remail" 40% / 52px auto 52px;
  place-items: center;
  width: 90%;
  height: 160px;
  margin-bottom: 4em;
  background: url('../images/langbanner.jpg') no-repeat center;

  background-size: cover;
}

button:focus{
	outline: none;
}
/* ... */

